Documentation cleanup and readability

--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-symmetric.txt">AES-XTS 2.0</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-symmetric.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-symmetric.txt">AES-FF1</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-symmetric.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-symmetric.txt">AES-FF3-1</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-symmetric.html">HTML</a> - DEMO only</li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-ross-acvp-ascon.txt">Ascon-AEAD128</a> - <a href="https://pages.nist.gov/ACVP/draft-ross-acvp-ascon.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-symmetric.txt">TDES-CBC</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-symmetric.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-symmetric.txt">TDES-CBCI</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-symmetric.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-symmetric.txt">TDES-CFB1</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-symmetric.html">HTML</a></li>
@@ -193,6 +194,7 @@
 
 				<h2 id="hashes">Secure Hash</h2>
 				<ul>
+					<li><a href="https://pages.nist.gov/ACVP/draft-ross-acvp-ascon.txt">Ascon-Hash256</a> - <a href="https://pages.nist.gov/ACVP/draft-ross-acvp-ascon.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-sha.txt">SHA-1</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-sha.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-sha.txt">SHA-224</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-sha.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-sha.txt">SHA-256</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-sha.html">HTML</a></li>
@@ -212,6 +214,8 @@
 
 				<h2 id="xofs">XOFs</h2>
 				<ul>
+					<li><a href="https://pages.nist.gov/ACVP/draft-ross-acvp-ascon.txt">Ascon-XOF128</a> - <a href="https://pages.nist.gov/ACVP/draft-ross-acvp-ascon.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-ross-acvp-ascon.txt">Ascon-CXOF128</a> - <a href="https://pages.nist.gov/ACVP/draft-ross-acvp-ascon.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-sha3.txt">SHAKE-128</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-sha3.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-sha3.txt">SHAKE-256</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-sha3.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-xof.txt">cSHAKE-128</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-xof.html">HTML</a></li>
