--- a/index.html
+++ b/index.html
@@ -176,7 +176,6 @@
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-symmetric.txt">AES-XTS 2.0</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-symmetric.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-symmetric.txt">AES-FF1</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-symmetric.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-symmetric.txt">AES-FF3-1</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-symmetric.html">HTML</a> - DEMO only</li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-ross-acvp-ascon.txt">Ascon-AEAD128</a> - <a href="https://pages.nist.gov/ACVP/draft-ross-acvp-ascon.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-symmetric.txt">TDES-CBC</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-symmetric.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-symmetric.txt">TDES-CBCI</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-symmetric.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-symmetric.txt">TDES-CFB1</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-symmetric.html">HTML</a></li>
@@ -194,7 +193,6 @@
 
 				<h2 id="hashes">Secure Hash</h2>
 				<ul>
-					<li><a href="https://pages.nist.gov/ACVP/draft-ross-acvp-ascon.txt">Ascon-Hash256</a> - <a href="https://pages.nist.gov/ACVP/draft-ross-acvp-ascon.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-sha.txt">SHA-1</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-sha.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-sha.txt">SHA-224</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-sha.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-sha.txt">SHA-256</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-sha.html">HTML</a></li>
@@ -214,8 +212,6 @@
 
 				<h2 id="xofs">XOFs</h2>
 				<ul>
-					<li><a href="https://pages.nist.gov/ACVP/draft-ross-acvp-ascon.txt">Ascon-XOF128</a> - <a href="https://pages.nist.gov/ACVP/draft-ross-acvp-ascon.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-ross-acvp-ascon.txt">Ascon-CXOF128</a> - <a href="https://pages.nist.gov/ACVP/draft-ross-acvp-ascon.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-sha3.txt">SHAKE-128</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-sha3.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-sha3.txt">SHAKE-256</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-sha3.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-xof.txt">cSHAKE-128</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-xof.html">HTML</a></li>
@@ -234,28 +230,17 @@
 					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">AES-GMAC</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">CMAC-AES</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">CMAC-TDES</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA-1 1.0</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA2-224 1.0</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA2-256 1.0</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA2-384 1.0</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA2-512 1.0</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA2-512/224 1.0</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA2-512/256 1.0</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA3-224 1.0</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA3-256 1.0</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA3-384 1.0</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA3-512 1.0</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA-1 2.0</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA2-224 2.0</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA2-256 2.0</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA2-384 2.0</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA2-512 2.0</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA2-512/224 2.0</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA2-512/256 2.0</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA3-224 2.0</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA3-256 2.0</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA3-384 2.0</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
-					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA3-512 2.0</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA-1</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA2-224</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA2-256</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA2-384</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA2-512</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA2-512/224</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA2-512/256</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA3-224</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA3-256</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA3-384</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA3-512</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
 				</ul>
 
 				<h2 id="drbgs">DRBGs</h2>
@@ -454,6 +439,13 @@
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-ml-dsa.txt">ML-DSA sigVer</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-ml-dsa.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-ml-kem.txt">ML-KEM keyGen</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-ml-kem.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-ml-kem.txt">ML-KEM encapsulation and decapsulation</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-ml-kem.html">HTML</a></li>
+				</ul>
+
+				<h2 id="NTRU lattice-based-signatures">NTRU Lattice-Based Signatures</h2>
+				<ul>
+					<li><a href="https://pages.nist.gov/ACVP/draft-ciadoux-acvp-fn-dsa.txt">FN-DSA keyGen</a> - <a href="https://pages.nist.gov/ACVP/draft-ciadoux-acvp-fn-dsa.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-ciadoux-acvp-fn-dsa.txt">FN-DSA sigGen</a> - <a href="https://pages.nist.gov/ACVP/draft-ciadoux-acvp-fn-dsa.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-ciadoux-acvp-fn-dsa.txt">FN-DSA sigVer</a> - <a href="https://pages.nist.gov/ACVP/draft-ciadoux-acvp-fn-dsa.html">HTML</a></li>
 				</ul>
 
 				<p>See <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-spec.html#name-algorithms">the algorithm endpoint</a> to learn which algorithms are available on a given ACVP server.</p>
