--- a/index.html
+++ b/index.html
@@ -256,6 +256,8 @@
 					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA3-256 2.0</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA3-384 2.0</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
 					<li><a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.txt">HMAC-SHA3-512 2.0</a> - <a href="https://pages.nist.gov/ACVP/draft-fussell-acvp-mac.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-xof.txt">KMAC-128</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-xof.html">HTML</a></li>
+					<li><a href="https://pages.nist.gov/ACVP/draft-celi-acvp-xof.txt">KMAC-256</a> - <a href="https://pages.nist.gov/ACVP/draft-celi-acvp-xof.html">HTML</a></li>
 				</ul>
 
 				<h2 id="drbgs">DRBGs</h2>
